<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/call"
                android:onClick="onClick"
                android:src="@android:drawable/sym_action_call" />

            <ImageView
                android:id="@+id/contact_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/avatar"
                android:maxWidth="125dp"
                android:scaleType="centerInside"
                android:src="@drawable/avatar_default" />

            <ImageButton
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/message"
                android:onClick="onClick"
                android:src="@android:drawable/sym_action_email" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="left"
                android:text="@string/firstname"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="left"
                android:text="@string/firstname" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/promotion"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/promo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/promotion" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/classe"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/classe"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/classe" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/year"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/year"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/year" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/address"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:paddingBottom="5dp" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/email"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:paddingBottom="5dp" >
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/phone"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/telephone"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:paddingBottom="5dp" >
        </LinearLayout>
    </LinearLayout>

</ScrollView>